fix: get the box behind the text and color changes

--- a/personal-website/src/Components/Intro/Intro.css
+++ b/personal-website/src/Components/Intro/Intro.css
@@ -13,13 +13,15 @@
 }
 
 .typingColorBox {
-  background-color: #374f2f;
+  background-color: #c57620;
   height: 3rem;
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  top: 50%;
+  top: 45%;
+  mix-blend-mode: multiply;
+  opacity: 0.85;
 }
 
 .bullet-list {
@@ -46,6 +48,7 @@
   left: 0;
   top: 50%;
   transform: translateY(-50%);
+  color: #c57620;
 }
 
 .bullet-list li.clickable {
